# ats-resume-builder

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.streamlit/: config.toml
data/: JD.txt  main.tex  proj_academic_2-2.json  work_agoda_2-2.json  work_shopee_2-2.json  work_swat_4-5.json
main_code/: __init__.py  app.py  build_resume.py  resume_bullet_workflow.py  workflow_prompts.py
